--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container text-center mb-5">
       <h2 class="py-5 text-light">Explore top categories</h2>
       <div class="wrap-categories">
-        <div class="one-cat mb-4 bg-white border-0 p-3 shadow">
+        <div class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-coding.svg" class="card-img-top" alt="coding">
           </div>
@@ -116,7 +116,7 @@
                   class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
-        <div class="one-cat mb-4 bg-white border-0 p-3 shadow">
+        <div class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-business.svg" class="card-img-top" alt="business">
           </div>
@@ -126,7 +126,7 @@
                   class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
-        <div class="one-cat mb-4 bg-white border-0 p-3 shadow">
+        <div class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-design.svg" class="card-img-top" alt="design">
           </div>
