--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     </div>
                   </div>
                   <div class="col-3 px-0">
-                    <button class="btn bg-brand py-3 text-white font-weight-light col"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+                    <button class="btn bg-brand py-3 text-white font-weight-light col">
+                      <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
                   </div>
                 </div>
               </form>
