remove important occurence

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="#" class="text-white">
               <i class="fa fa-search" aria-hidden="true"></i>Search</a>
           </li>
+        </ul>
       </div>
-      </ul>
     </nav>
     <div class="nav-scroller py-1 mb-2 d-lg-none d-xl-none">
       <nav class="nav d-flex justify-content-center py-2">
@@ -65,7 +65,7 @@
                 <div class="row bg-white mx-0 shadow">
                   <div class="col-9 py-2">
                     <div class="form-group m-0">
-                      <input type="email" class="form-control" placeholder="Search course...">
+                      <input type="search" class="form-control" placeholder="Search course...">
                     </div>
                   </div>
                   <div class="col-3 px-0">
