--- a/index.html
+++ b/index.html
@@ -22,18 +22,24 @@
         </a>
         <ul class="list-inline py-1 my-2 d-none d-lg-block d-xl-block">
           <li class="list-inline-item">
-            <a href="#" class="text-white">
+            <a href="./" class="text-white">
+              <i class="fa fa-home" aria-hidden="true"></i>
+              Home
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="./courses.html" class="text-white">
               <i class="fa fa-folder" aria-hidden="true"></i>
               Courses
             </a>
           </li>
           <li class="list-inline-item">
             <a href="#" class="text-white">
-              <i class="fa fa-question-circle" aria-hidden="true"></i>About</a>
+              <i class="fa fa-user" aria-hidden="true"></i>About</a>
           </li>
           <li class="list-inline-item">
             <a href="#" class="text-white">
-              <i class="fa fa-signature" aria-hidden="true"></i>Blog</a>
+              <i class="fa fa-rss" aria-hidden="true"></i>Blog</a>
           </li>
           <li class="list-inline-item">
             <a href="#" class="text-white">
@@ -42,22 +48,23 @@
         </ul>
       </div>
     </nav>
-    <div class="nav-scroller py-1 mb-2 d-lg-none d-xl-none">
+    <div class="py-2 d-lg-none d-xl-none">
       <nav class="nav d-flex justify-content-center py-2">
-        <a class="px-4 text-white" href="#"><i class="fa fa-folder" aria-hidden="true"></i></a>
-        <a class="px-4 text-white" href="#"><i class="fa fa-question-circle" aria-hidden="true"></i></a>
-        <a class="px-4 text-white" href="#"><i class="fa fa-signature" aria-hidden="true"></i></a>
+        <a class="px-4 text-white" href="./courses.html"><i class="fa fa-folder" aria-hidden="true"></i></a>
+        <a class="px-4 text-white" href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
+        <a class="px-4 text-white" href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
         <a class="px-4 text-white" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
       </nav>
     </div>
   </header>
+  <main>
   <section class="clearfix" id="intro">
     <div class="container welcome-none">
       <div class="row align-items-center h-100">
         <div class="col-12">
           <div class="justify-content-center text-light align-self-center text-center">
             <h1 class="py-3">Best courses, Best instructors</h1>
-            <div class="text-arial slogan-description">
+            <div class="text-helvetica slogan-description">
               Search from 30,000 online courses with the best instructors
             </div>
             <div class="wrap-search my-4 p-3 mx-auto shadow">
@@ -108,40 +115,41 @@
     <div class="container text-center mb-5">
       <h2 class="py-5 text-light">Explore top categories</h2>
       <div class="wrap-categories">
-        <div class="one-cat mb-4 bg-white p-3 shadow">
+        <article class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-coding.svg" class="card-img-top" alt="coding">
           </div>
           <div>
-            <h3 class="card-title text-brand">IT &amp; Programming</h5>
+            <h3 class="text-brand">IT &amp; Programming</h3>
               <a href="#" class="btn border text-dark px-4 radius-1 text-uppercase">See more <i
                   class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
-        </div>
-        <div class="one-cat mb-4 bg-white p-3 shadow">
+        </article>
+        <article class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-business.svg" class="card-img-top" alt="business">
           </div>
           <div>
-            <h3 class="card-title text-brand">Business</h5>
+            <h3 class="text-brand">Business</h3>
               <a href="#" class="btn border text-dark px-4 radius-1 text-uppercase">See more <i
                   class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
-        </div>
-        <div class="one-cat mb-4 bg-white p-3 shadow">
+        </article>
+        <article class="one-cat mb-4 bg-white p-3 shadow">
           <div class="image">
             <img src="./images/c-design.svg" class="card-img-top" alt="design">
           </div>
           <div>
-            <h3 class="card-title text-brand">Graphic Design</h3>
+            <h3 class="text-brand">Graphic Design</h3>
             <a href="#" class="btn border text-dark px-4 radius-1 text-uppercase">See more <i
                 class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
-        </div>
+        </article>
       </div>
     </div>
     <br>
   </section>
+  </main>
   <footer class="bg-black">
     <div class="container">
       <div class="pt-5 text-white text-center">
