Add screenshot Update live demo link

--- a/course.html
+++ b/course.html
@@ -100,7 +100,7 @@
       <section class="clearfix py-2">
         <div class="container mb-5">
           <div class="wrap-course-details">
-            <div class="course-details shadow bg-white rounded p-2">
+            <div class="course-details shadow bg-white rounded mb-4 p-2">
               <h2 class="m-3">About</h2>
               <p class="font-weight-normal">
                 This specialization is a mix of theory and practice: you will
@@ -290,9 +290,8 @@
                   <div>
                     <h3 class="my-2 text-truncate text-helvetica">
                       <a href="course.html">
-                        Python: from 0 to
+                        Python: from 0 to hero
                       </a>
-                      hero
                     </h3>
                     <div>Programming</div>
                     <span class="font-weight-bold radius-1 text-uppercase"
