--- a/courses.html
+++ b/courses.html
@@ -111,8 +111,8 @@
                 <div>
                   <h3 class="my-2 text-truncate text-helvetica">
                     <a href="course.html">
-                      Python: from 0 to
-                    </a> hero</h3>
+                      Python: from 0 to hero
+                    </a> </h3>
                     <div>Programming</div>
                     <span class="font-weight-bold radius-1 text-uppercase">$50 </span>
                 </div>
@@ -168,8 +168,8 @@
                 <div>
                   <h3 class="my-2 text-truncate text-helvetica">
                     <a href="course.html">
-                      Python: from 0 to
-                    </a> hero</h3>
+                      Python: from 0 to hero
+                    </a> </h3>
                     <div>Programming</div>
                     <span class="font-weight-bold radius-1 text-uppercase">$73 </span>
                 </div>
@@ -225,8 +225,8 @@
                 <div>
                   <h3 class="my-2 text-truncate text-helvetica">
                     <a href="course.html">
-                      IBM Data Science
-                    </a> hero</h3>
+                      IBM Data Science hero
+                    </a> </h3>
                     <div>Database</div>
                     <span class="font-weight-bold radius-1 text-uppercase">$50 </span>
                 </div>
@@ -282,8 +282,8 @@
                 <div>
                   <h3 class="my-2 text-truncate text-helvetica">
                     <a href="course.html">
-                      Python: from 0 to
-                    </a> hero</h3>
+                      Python: from 0 to hero
+                    </a> </h3>
                     <div>Database</div>
                     <span class="font-weight-bold radius-1 text-uppercase">$73 </span>
                 </div>
